# wasm-tar

./: Cargo.toml  LICENSE  README.md
TestZipFolder/: fileTest.txt
TestZipFolder/nestedFolder1/: nestedFile1.txt
TestZipFolder/nestedFolder2/: nestedFile2.txt
src/: lib.rs  tar.rs  utils.rs  zip.rs
src/tests/: tar.rs  zip.rs
