[package]
name = "wasm-tar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
flate2 = "1.0.24"
tar = "0.4.38"
wasm-bindgen = "0.2.80"
zip = "0.6.2"


[dev-dependencies]
tempfile = "3.3.0"
# cargo test -- --nocapture
